fix: dropdown__list invisible on default

--- a/styles/common.css
+++ b/styles/common.css
@@ -66,6 +66,7 @@
   flex-direction: column;
   position: absolute;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  display: none;
 }
 .dropdown__item {
   width: 100%;
